# rgb-spot-color-wheel

./: LICENSE.txt  README.md  pyproject.toml
misc/rgb_spot/: rgb_spot.ino
src/rgb_spot_color_wheel/: __main__.py  interface.py  main.py
tools/: color_wheel.py
